--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/fulfvx3112/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680567.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230479250-320x200.jpg"><p align="center">【疫情更新1·11】日本出现全新变种病毒</p></a>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680567.md#1" title="【疫情更新1·11】日本出现全新变种病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230479250-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679974.md#1" title="员工猝死又自杀 拼多多开除爆料者遭痛批""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/5dd60e9524cbc.jpg">&nbsp;</a>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680297.md#1" title="奥布莱恩：美国正研拟进一步行动应对中共""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1177748633@1200x1200-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680134.md#1" title="澳议员发起请愿 吁终结科技巨头言论审查""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/09/GettyImages-1024855232-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677509.md#1" title="解密文档揭中共2009年封杀的关键词""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/912100358561497-594x400-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678866.md#1" title="上海人陆树恒实名举报中共活摘人体器官罪行""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/cd7385c1e15f0a01bae53ced8f3d5975-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679048.md#1" title="Parler执行长：准备采取全面法律行动""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1225872887-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679043.md#1" title="巴基斯坦全国大停电 2.12亿人受影响""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230510985-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678707.md#1" title="【疫情更新1.10】国会医生警告议员恐已触病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/US-capitol-edited-700x420-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://fulfvx3112.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680556.md#1">大陆50家上市房企2020年市值缩水8千亿</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680409.md#1">辽宁等地前政协副主席被双开 通报用词罕见</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680708.md#1">多名国会众议员吁拜登发声 反对弹劾川普</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679740.md#1">【更新】密州议会继续推进选举违规调查</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680666.md#1">数千只野鸡占领夏威夷小岛 四处趴趴走</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680497.md#1">去年国旅创历史新高 谢金河：带给台湾大改变</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12681065.md#1">蓬佩奥宣布取消台美间所有交往限制</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680805.md#1">增6例境外移入 3人为埃及家庭群聚</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680725.md#1">受贿超千万 河南副省长徐光被判刑11年</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680802.md#1">蔡英文：感谢连锁加盟业一起打拼台湾经济</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673903.md#1">屡遭迫害 67岁法轮功学员张珍华被冤判8年</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680799.md#1">吴钊燮：台人持新护照通行世界没问题</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677720.md#1">严冬禁煤限电惹众怒 李克强急开国务院常务会</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677894.md#1">传拜登上任后 北京计划派杨洁篪快速赴美</a><br>
@@ -28,6 +28,7 @@
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678427.md#1">【翻墙必看】中共遭遇罕见的三重严重冲击</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/28/n12650390.md#1">金里奇：议员中美人计 中共威胁就在眼前</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678639.md#1">拼多多再传员工死讯 一工程师跳楼身亡</a><br>
+<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679448.md#1">章家敦：北京利用美动荡搞宣传 现军管迹象</a><br>
 <br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678924.md#1">【名家专栏】封锁防疫无效 别再重蹈覆辙</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/3/n12594207.md#1">【思想领袖】汉森：科技独裁下的新世界</a><br>
@@ -48,12 +49,14 @@
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679966.md#1">【翻墙必看】传马云恐被抓关押在黑屋</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679136.md#1">推特用户外流 Gab日增50万人 川普也下载</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679379.md#1">A股数只个股跨年暴跌 涉及至少三万股民</a><br>
-<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679048.md#1">Parler执行长：准备采取全面法律行动</a><br>
+<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680708.md#1">多名国会众议员吁拜登发声 反对弹劾川普</a><br>
+<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680725.md#1">受贿超千万 河南副省长徐光被判刑11年</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679623.md#1">山东监狱里的“阎王班”</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679612.md#1">女儿想要个妹妹 张梓琳反问“是弟弟咋办”</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679436.md#1">张檬晒素颜证件照 告诫后来人不要整容</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679249.md#1">李易峰消毒被赞有范儿 称最大风浪是北京降温</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679629.md#1">【役情最前线】美台限制解除 金正恩喊重启核武</a><br>
+<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678707.md#1">【疫情更新1.10】国会医生警告议员恐已触病毒</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677075.md#1">中共如何用微信在美审查言论 华人揭真相</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678583.md#1">疫情失控？石家庄现哄抬物价 当局要求举报</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678410.md#1">【横河直播】变异病毒来势猛 美大使访台释信号</a><br>
@@ -95,17 +98,15 @@
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/6/n12671428.md#1">江苏昆山世硕返费打九折 数千工人群起抗议</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/6/n12671310.md#1">梁朝伟新片突遭撤档 传投资方涉金融爆雷</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/6/n12671536.md#1">【一线采访】河北战时状态 小果庄人述疫情</a><br>
-<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/6/n12671216.md#1">纽约证交所再翻转 将三家中国电信公司摘牌</a><br>
-<a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/6/n12670998.md#1">【财商天下】严冬禁煤电取暖 谁抢了百姓的电？</a><br>
 <br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://219.85.96.200/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 55,428</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://61.223.66.210/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 55,428</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 370,931,404 人
+!共 370,939,747 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680198.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2009/09/90910054900941-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680198.md#1">欲赴美探病妻 郭飞雄致李克强等紧急公开信</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678838.md#1">一个三峡移民家庭的悲惨遭遇</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677363.md#1">湘访民夫妇被安置医院 夫进京上访妻突死亡</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676440.md#1">公主岭监狱恶行 家属必须骂人 才允会见亲人</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12675238.md#1">信访办接待日不开门 八旬访民-19℃门口挨冻</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12674620.md#1">代理人权案将被吊照 任全牛律师要求公开听证</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680556.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/02/1507281229382584-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680556.md#1">大陆50家上市房企2020年市值缩水8千亿</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680498.md#1">遵守川普行政令 华尔街三大投行下架在港产品</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680064.md#1">无证销售楼盘 北京一房企被罚逾千万</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679974.md#1">员工匿名发帖被辞退 拼多多回应遭网民痛批</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679632.md#1">传蚂蚁集团将成立控股公司 囊括旗下金融业务</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679091.md#1">专家：中共政权下的洗钱规模引国际聚焦</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680409.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/3314-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680409.md#1">辽宁等地前政协副主席被双开 通报用词罕见</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680449.md#1">河北疫情现乱象 大学生提前放假困街头</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679878.md#1">马云失踪事件 专家：中国企业家一直面临风险</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679761.md#1">美台取消交往限制 薛瑞福：为未来新局打基础</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12676991.md#1">传中共悬赏他人袭驻阿富汗美军 专家吁美反击</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679448.md#1">章家敦：北京利用美动荡搞宣传 现军管迹象</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680193.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/455-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680193.md#1">北京菜市场、湖南电池厂接连发生火灾</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678588.md#1">石家庄新增11个中风险区 重启第二轮检测</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678677.md#1">疫情爆发 大陆多地要求到外地过年先报批</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677573.md#1">中国抗疫抗寒 形势严峻 2021经济恐再遭挫</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677695.md#1">石家庄3天检出354阳性 集中隔离逾万人</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677423.md#1">疫情严峻 石家庄公交、地铁、出租车全停运</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679756.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679756.md#1">三退声明精选（2021/01/10）</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678514.md#1">江苏11月大婴儿被裹8件衣服 患捂热综合症</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678475.md#1">大陆东北有多冷？水溅到挡风玻璃瞬间结冰</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12676924.md#1">三退声明精选（2020/01/08）</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12674497.md#1">三退声明精选（2021/01/07）</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673786.md#1">Overstock创始人：美国大选背后有中共黑手</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/5/n12667910.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2007/03/703300759311459-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/5/n12667910.md#1">台湾故宫开年钜献—南薰殿帝后像特展</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12666446.md#1">遛狗返家倒地不起 007邦女郎坦娅·罗伯茨骤逝</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/3/n12663563.md#1">大连理工大女生被撞死 肇事者为前副校长</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/1/n12659568.md#1">南宁大一女生产子后杀婴藏尸 引舆论关注</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/31/n12657518.md#1">【新闻大家谈】年度汉字 2021须知的事</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/31/n12657410.md#1">“旅行”加“晚宴”西媒如何被中共收买</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673903.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673903.md#1">屡遭迫害 67岁法轮功学员张珍华被冤判8年</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680198.md#1">欲赴美探病妻 郭飞雄致李克强等紧急公开信</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678838.md#1">一个三峡移民家庭的悲惨遭遇</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677363.md#1">湘访民夫妇被安置医院 夫进京上访妻突死亡</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676440.md#1">公主岭监狱恶行 家属必须骂人 才允会见亲人</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12675238.md#1">信访办接待日不开门 八旬访民-19℃门口挨冻</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680556.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/02/1507281229382584-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680556.md#1">大陆50家上市房企2020年市值缩水8千亿</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680498.md#1">遵守川普行政令 华尔街三大投行下架在港产品</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680064.md#1">无证销售楼盘 北京一房企被罚逾千万</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679632.md#1">传蚂蚁集团将成立控股公司 囊括旗下金融业务</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679091.md#1">专家：中共政权下的洗钱规模引国际聚焦</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677573.md#1">中国抗疫抗寒 形势严峻 2021经济恐再遭挫</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680409.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/3314-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680409.md#1">辽宁等地前政协副主席被双开 通报用词罕见</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680449.md#1">河北疫情现乱象 大学生提前放假困街头</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679878.md#1">马云失踪事件 专家：中国企业家一直面临风险</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679761.md#1">美台取消交往限制 薛瑞福：为未来新局打基础</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12676991.md#1">传中共悬赏他人袭驻阿富汗美军 专家吁美反击</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678850.md#1">石家庄一前公安副局长不带口罩 骂人闯出小区</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680193.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/455-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680193.md#1">北京菜市场、湖南电池厂接连发生火灾</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678588.md#1">石家庄新增11个中风险区 重启第二轮检测</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678677.md#1">疫情爆发 大陆多地要求到外地过年先报批</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677695.md#1">石家庄3天检出354阳性 集中隔离逾万人</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677423.md#1">疫情严峻 石家庄公交、地铁、出租车全停运</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12676860.md#1">【独家】河北防疫文件泄新年疫情更危急</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679756.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679756.md#1">三退声明精选（2021/01/10）</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678514.md#1">江苏11月大婴儿被裹8件衣服 患捂热综合症</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678475.md#1">大陆东北有多冷？水溅到挡风玻璃瞬间结冰</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12676924.md#1">三退声明精选（2020/01/08）</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12674497.md#1">三退声明精选（2021/01/07）</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673786.md#1">Overstock创始人：美国大选背后有中共黑手</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/5/n12667910.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2007/03/703300759311459-320x200.jpg"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/5/n12667910.md#1">台湾故宫开年钜献—南薰殿帝后像特展</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12666446.md#1">遛狗返家倒地不起 007邦女郎坦娅·罗伯茨骤逝</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/3/n12663563.md#1">大连理工大女生被撞死 肇事者为前副校长</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/1/n12659568.md#1">南宁大一女生产子后杀婴藏尸 引舆论关注</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/31/n12657518.md#1">【新闻大家谈】年度汉字 2021须知的事</a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/31/n12657410.md#1">“旅行”加“晚宴”西媒如何被中共收买</a><br><br><p align="center"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/20/n12632837.md#1">【独家】国防密件曝中共“精确制导”项目</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/22/n12636952.md#1">【独家】中共军民融合企业 搜海外先进技术</a><br>
 <a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/21/n12634668.md#1">【内幕】河北全方位管控网络负面舆论手段</a><br>
